--- a/app/src/main/res/layout/activity_job_order_details.xml
+++ b/app/src/main/res/layout/activity_job_order_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".job_orders.JobOrderDetailsActivity">
+    tools:context=".job_orders.jo_order_details.JobOrderDetailsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -290,51 +290,11 @@
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
-
-                <RelativeLayout
-                    android:id="@+id/payment_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:layout_marginTop="10dp">
-
-                    <TextView
-                        android:id="@+id/payment_percent_txt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginEnd="10dp"
-                        android:text="% paid"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="14sp" />
-
-                    <com.google.android.material.progressindicator.LinearProgressIndicator
-                        android:id="@+id/progress_indicator"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_toStartOf="@+id/adel_seen_txt"
-                        android:layout_toEndOf="@+id/payment_percent_txt"
-                        tools:progress="30" />
-
-                    <TextView
-                        android:id="@+id/adel_seen_txt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginStart="10dp"
-                        android:text="@string/adel_seen"
-                        android:textColor="@color/green"
-                        android:textSize="14sp" />
-
-                </RelativeLayout>
-
                 <RelativeLayout
                     android:id="@+id/adel_approval_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:visibility="gone">
@@ -402,10 +362,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
                     android:textColor="@color/red"
                     android:textSize="16sp"
+                    android:visibility="gone"
                     android:textStyle="bold" />
 
                 <TextView
@@ -413,11 +374,76 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
                     android:textColor="@color/red"
+                    android:visibility="gone"
                     android:textSize="16sp"
                     android:textStyle="bold" />
+
+
+                <LinearLayout
+                    android:id="@+id/payment_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp">
+
+                        <TextView
+                            android:id="@+id/payment_percent_txt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_marginEnd="10dp"
+                            tools:text="% paid"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="14sp" />
+
+                        <com.google.android.material.progressindicator.LinearProgressIndicator
+                            android:id="@+id/progress_indicator"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toStartOf="@+id/adel_seen_txt"
+                            android:layout_toEndOf="@+id/payment_percent_txt"
+                            tools:progress="30" />
+
+                        <TextView
+                            android:id="@+id/adel_seen_txt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginStart="10dp"
+                            android:text="@string/adel_seen"
+                            android:textColor="@color/green"
+                            android:textSize="14sp" />
+
+                    </RelativeLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="20dp"
+                        android:textColor="@color/gray"
+                        android:text="@string/payments"
+                        android:textSize="16sp" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        tools:listitem="@layout/item_payment" />
+
+
+                </LinearLayout>
+
 
             </LinearLayout>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
