--- a/app/src/main/res/layout/item_edit_job_order_request.xml
+++ b/app/src/main/res/layout/item_edit_job_order_request.xml
@@ -25,126 +25,151 @@
                 android:orientation="vertical"
                 android:padding="10dp">
 
-                <LinearLayout
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_toStartOf="@+id/delete"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="10dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/request_name"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/request_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:text="@string/test_text"
+                            android:textColor="@color/text_dark_blue"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/delete"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_delete"
+                        android:padding="5dp"
+                        android:layout_alignParentEnd="true"
+                        app:tint="@color/red" />
+
+                </RelativeLayout>
+
+
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_marginTop="5dp">
 
-                    <TextView
+                    <LinearLayout
+                        android:id="@+id/final_cost_container"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/request_name"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:visibility="visible">
 
-                    <TextView
-                        android:id="@+id/request_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:text="@string/test_text"
-                        android:textColor="@color/text_dark_blue"
-                        android:textSize="16sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/final_cost_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:visibility="visible">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/quantity"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/quantity"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
 
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:background="@color/list_item_bg"
-                        app:cardCornerRadius="8dp"
-                        app:cardElevation="3dp">
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="80dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginBottom="5dp"
+                            android:background="@color/list_item_bg"
+                            app:cardCornerRadius="8dp"
+                            app:cardElevation="3dp">
 
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-
-                            <EditText
-                                android:id="@+id/quantity"
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="40dp"
-                                android:background="@color/transparent"
-                                android:hint="@string/quantity"
-                                android:importantForAutofill="no"
-                                android:inputType="numberDecimal"
-                                android:padding="10dp"
-                                android:textColor="@color/black"
-                                android:textSize="16sp" />
-                        </RelativeLayout>
-                    </androidx.cardview.widget.CardView>
+                                android:layout_height="wrap_content">
 
-                </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:visibility="visible">
+                                <EditText
+                                    android:id="@+id/quantity"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="40dp"
+                                    android:background="@color/transparent"
+                                    android:hint="@string/quantity"
+                                    android:importantForAutofill="no"
+                                    android:inputType="numberDecimal"
+                                    android:padding="10dp"
+                                    android:textColor="@color/black"
+                                    android:textSize="16sp" />
+                            </RelativeLayout>
+                        </androidx.cardview.widget.CardView>
 
-                    <TextView
-                        android:id="@+id/cost_type"
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/final_cost"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        android:layout_alignParentEnd="true"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:visibility="visible">
+
+                        <TextView
+                            android:id="@+id/cost_type"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/final_cost"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
 
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:background="@color/list_item_bg"
-                        app:cardCornerRadius="8dp"
-                        app:cardElevation="3dp">
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="80dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginBottom="5dp"
+                            android:background="@color/list_item_bg"
+                            app:cardCornerRadius="8dp"
+                            app:cardElevation="3dp">
 
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-
-                            <EditText
-                                android:id="@+id/final_cost"
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="40dp"
-                                android:background="@color/transparent"
-                                android:hint="@string/cost"
-                                android:importantForAutofill="no"
-                                android:inputType="numberDecimal"
-                                android:padding="10dp"
-                                android:textColor="@color/black"
-                                android:textSize="16sp" />
-                        </RelativeLayout>
-                    </androidx.cardview.widget.CardView>
+                                android:layout_height="wrap_content">
 
-                </LinearLayout>
+
+                                <EditText
+                                    android:id="@+id/final_cost"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="40dp"
+                                    android:background="@color/transparent"
+                                    android:hint="@string/cost"
+                                    android:importantForAutofill="no"
+                                    android:inputType="numberDecimal"
+                                    android:padding="10dp"
+                                    android:textColor="@color/black"
+                                    android:textSize="16sp" />
+                            </RelativeLayout>
+                        </androidx.cardview.widget.CardView>
+
+                    </LinearLayout>
+                </RelativeLayout>
+
 
             </LinearLayout>
 
