--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -56,7 +56,7 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/content"
+            android:id="@+id/comment"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
