--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -42,6 +42,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:listitem="@layout/item_comment"
@@ -70,7 +71,6 @@
             android:importantForAutofill="no"
             android:inputType="text" />
 
-
         <ImageView
             android:id="@+id/add_comment"
             android:layout_width="40dp"
@@ -84,6 +84,13 @@
             android:gravity="center"
             android:src="@drawable/ic_send" />
 
-
     </RelativeLayout>
+
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center" />
 </RelativeLayout>
