--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -10,9 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_above="@+id/comment_layout"
-        >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,15 +44,15 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/item_comment"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            tools:listitem="@layout/item_comment" />
     </LinearLayout>
 
 
     <RelativeLayout
         android:id="@+id/comment_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/add_comment_bg"
         android:focusableInTouchMode="true"
@@ -63,25 +62,43 @@
         <EditText
             android:id="@+id/et_comment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toStartOf="@+id/add_comment"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@+id/add_attach"
             android:background="@color/transparent"
             android:hint="@string/add_comment"
             android:imeOptions="actionDone"
             android:importantForAutofill="no"
+            android:textSize="18sp"
             android:inputType="text" />
+
+        <TextView
+            android:id="@+id/files_chosen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/et_comment"
+            android:text="@string/no_file_choose"
+            android:visibility="gone"
+            android:textColor="@color/text_request_gray"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:id="@+id/add_attach"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@id/add_comment"
+            android:contentDescription="@string/description"
+            android:src="@drawable/ic_attach_file"
+            app:tint="@color/gray" />
 
         <ImageView
             android:id="@+id/add_comment"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentStart="false"
-            android:layout_alignParentTop="true"
+            android:layout_width="35dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="5dp"
+            android:layout_centerVertical="true"
+            android:adjustViewBounds="true"
             android:contentDescription="@string/description"
-            android:gravity="center"
             android:src="@drawable/ic_send" />
 
     </RelativeLayout>
