--- a/app/src/main/res/layout/activity_job_order_details.xml
+++ b/app/src/main/res/layout/activity_job_order_details.xml
@@ -357,7 +357,7 @@
                 </RelativeLayout>
 
                 <TextView
-                    android:id="@+id/financial_reasons"
+                    android:id="@+id/reasons"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -365,20 +365,8 @@
                     android:layout_marginEnd="20dp"
                     android:textColor="@color/red"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:visibility="gone" />
+                    android:textStyle="bold"/>
 
-                <TextView
-                    android:id="@+id/ceo_reasons"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="20dp"
-                    android:textColor="@color/red"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:visibility="gone" />
 
                 <LinearLayout
                     android:id="@+id/payment_layout"
