--- a/app/src/main/res/layout/activity_job_order_details.xml
+++ b/app/src/main/res/layout/activity_job_order_details.xml
@@ -373,7 +373,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    >
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -405,9 +406,22 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_marginStart="10dp"
-                            android:text="@string/adel_seen"
+                            android:text="@string/seen_by_adel"
                             android:textColor="@color/green"
-                            android:textSize="14sp" />
+                            android:textSize="14sp"
+                            app:drawableStartCompat="@drawable/ic_seen"
+                            app:drawableTint="@color/green" />
+                        <TextView
+                            android:id="@+id/adel_unseen_txt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginStart="10dp"
+                            android:text="@string/not_seen_by_adel"
+                            android:textColor="@color/red"
+                            android:textSize="14sp"
+                            app:drawableStartCompat="@drawable/ic_unseen"
+                            app:drawableTint="@color/red" />
 
                     </RelativeLayout>
 
