--- a/app/src/main/res/layout/activity_job_order_details.xml
+++ b/app/src/main/res/layout/activity_job_order_details.xml
@@ -296,7 +296,7 @@
                     android:layout_marginTop="20dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:visibility="gone">
+                    >
 
 
                     <LinearLayout
@@ -354,7 +354,16 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white" />
 
+
                 </RelativeLayout>
+
+
+
+                <TextView
+                    android:id="@+id/hany_notes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="hany notes"/>
 
                 <TextView
                     android:id="@+id/reasons"
