--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -11,6 +11,11 @@
         android:title="@string/job_orders" />
 
     <item
+        android:id="@+id/navigation_all_requests"
+        android:icon="@drawable/ic_job_orders"
+        android:title="@string/requests" />
+
+    <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_profile"
         android:title="@string/profile" />
@@ -20,10 +25,10 @@
         android:icon="@drawable/ic_notifications"
         android:title="@string/notifications" />
 
-    <item
-        android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/settings"
-        android:visible="false"/>
+<!--    <item-->
+<!--        android:id="@+id/navigation_settings"-->
+<!--        android:icon="@drawable/ic_settings"-->
+<!--        android:title="@string/settings"-->
+<!--        android:visible="false"/>-->
 
 </menu>
